--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>The Office</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" >
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
@@ -13,12 +19,12 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <!-- <script src="./node_modules/feather-icons/dist/feather.js"></script> -->
 
-  <body>
-    <section class="mx-auto pt-20 px-10">
-      <div class="container mx-auto flex justify-between">
+  <body class="text-gr">
+    <section class="mx-auto pt-20 ">
+      <div class="container mx-auto flex justify-between px-2 md:px-10">
         <div class="w-1/2">
-          <h1 class="mb-4 text-8xl">The Office</h1>
-          <div class="mb-32 text-lg max-w-1/2">
+          <h1 class="mb-4 text-8xl text-gray-500">The Office</h1>
+          <div class="mb-16 text-lg md:max-w-1/2 text-gray-200">
             An interactive visualization of the episodes, characters, IMDB
             ratings, Viewership and awards won by the famous TV series - The
             Office. You can explore the data by interacting with the
@@ -28,7 +34,10 @@
         <div>About</div>
       </div>
       <div id="chart" class="flex justify-center items-center"></div>
-      <div class="legends container mx-auto flex gap-x-24">
+      <!-- <div  class="flex justify-center items-center  h-full overflow-auto" >
+        <div style="width:3000px" class="h-full bg-red-200">x</div>
+      </div> -->
+      <div class="legends container mx-auto flex gap-x-24  px-2 md:px-10">
         <div>
           <h3 class="text-xl mb-10">Characters and screen presence</h3>
           <img src="src/assets/legend1.png" alt="" />
@@ -38,17 +47,17 @@
           <img src="src/assets/legend2.png" alt="" />
         </div>
       </div>
-      <footer class="container mx-auto flex w-full gap-x-24 flex-between mt-32">
+      <footer class="container mx-auto flex w-full gap-x-24 flex-between mt-8 md:mt-32  px-2 md:px-10">
         <div class="flex-1" id="top-episodes">
-          <h2 class="text-3xl mb-10">Top Episodes</h2>
+          <h2 class="text-3xl mb-10 text-gray-500 ">Top Episodes</h2>
           <ul class="list-none"></ul>
         </div>
         <div class="flex-1" id="top-directors">
-          <h2 class="text-3xl mb-10">Top Directors</h2>
+          <h2 class="text-3xl mb-10 text-gray-500">Top Directors</h2>
           <ul class="list-none"></ul>
         </div>
         <div class="flex-1" id="top-writers">
-          <h2 class="text-3xl mb-10">Top Writers</h2>
+          <h2 class="text-3xl mb-10 text-gray-500">Top Writers</h2>
           <ul class="list-none"></ul>
         </div>
       </footer>
@@ -71,6 +80,16 @@
       <div class="close absolute right-2 top-2"></div>
       <header class="font-bold border-bottom-1"></header>
       <section></section>
+    </div>
+    <!-- mobile-warning-popover -->
+    <div id="popover-5" class="popup center p-5 rounded text-sm ">
+      <div class="close absolute right-2 top-2">X</div>
+      <header class="font-bold border-bottom-1">
+        Mobile screen detected
+      </header>
+      <section>
+        This experience is optimized for larger displays like a laptop or desktop. 
+      </section>
     </div>
     
     
